Updated Dockefile to hide environment variables 2024-03-23

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
     depends_on:
       project-db:
         condition: service_healthy
+    #env_file:
+      #- '.env'
     environment:
       PGUSER: ${PGUSER}
       PGPASSWORD: ${PGPASSWORD}
